
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pixelartfont"
version = "0.0.1"
authors = [
  { name="Vedh Rao", email="raovedh@gmail.com" },
]
description = "A pixel art font system to quickly load custom fonts"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [ "pygame-ce>=2.6.1",
]

[project.urls]
"Homepage" = "https://github.com/Shades-of-Dark/pixelartfontsystem"