
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[metadata]
name = "pixelartfont"
version = "0.0.1"

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[project]
name = "pixelartfont"
version = "0.0.1"
authors = [
  { name="Vedh Rao", email="raovedh@gmail.com" },
]
description = "Handy pixel art font package"
readme = "README.md"
requires-python = ">=3.8"